--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,10 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "@types/aos": "^3.0.3",
-    "@types/react-router-dom": "^5.1.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
