--- a/api/v0.0.1/package.json
+++ b/api/v0.0.1/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon api/v0.0.1/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
