--- a/api/v0.0.1/.env
+++ b/api/v0.0.1/.env
@@ -1,6 +1,2 @@
-# MONGO_URL="mongodb+srv://lefax:Abbasali97@lefaxapi.dupam.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
-MONGO_URL="mongodb://localhost:27017/MyTest"
-PASS_SEC="Abbasali97"
-JWT_SEC="Abbasali97"
-# PASS_SEC="Man_united"
-# JWT_SEC="Man_united"%     
+MONGO_URL="mongodb://localhost:27017/BMSQUARE"
+SECRET="Asam321"
