refractoring auth service

--- a/api/v0.0.1/package.json
+++ b/api/v0.0.1/package.json
@@ -2,7 +2,7 @@
   "name": "bakcendsempos",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon api/v0.0.1/app.js"
   },
